--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "chat-app-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -8,5 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "socket.io": "^4.8.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
