ready for deploy

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat_app_assignment",
+  "name": "chat-app-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,20 +15,11 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
-    "bcryptjs": "^3.0.2",
-    "bootstrap": "^5.3.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
-    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
